# integro-content

./: .dockerignore  .env.example  .env.livekit-cloud.example  .env.voice.example  .gitignore  AGENT_CREATION_GUIDE.md  DOCKER_SETUP_COMPLETE.md  Dockerfile  Dockerfile.voice  LOCAL_SETUP_GUIDE.md  Makefile  README.md  README_UV.md  REQUIREMENTS_GENERATION.md  SIMULATION_README.md  Tools (1).docx  agno_mapping.md  batch_import_agents.py  convert_simulation_to_markdown.py  create_agent_from_md.py  create_and_upload_kb.py  create_roots_v8_with_kb.py  debug_knowledge_bases.py  docker-compose.yaml  export_agents.py  import_agents.py  pyproject.toml  pytest.ini  python-docx_mapping.md  railway.json  requirements.txt  run_roots_v8_batch.py  run_tests.sh  setup.py  simulation_viewer.py  test_all_personas_batch.py  test_mixed_persona_batch.py  test_roots_healing_batch.py  test_two_agent_simulation.py  upload_books_to_qdrant.py  (+3 more)
.claude/: CLAUDE.md  evaluation.md  knowledge-base.md  personas.md  quick-reference.md  simulation-tools.md  statusline.sh
.claude/agents/: persona-generator.md  simulation-evaluator.md
Agents/: AGENT_BLUEPRINT_HIGHLIGHTS.md  Intentions Workflow 1.1.json  PERSONA_GENERATOR_AGENT_v2.1.md  Training_Free_Group_Optimization.md  intentions_workflow_8.md  intentions_workflow_improved.md  intentions_workflow_v5.md  paul-persona_2.1.json  paul-persona_3.json  paul_persona_1.json  roots_of_healing_workflow_1.md  roots_of_healing_workflow_8.md  run_template.json  simulation_20251015_211349.json  simulation_20251015_212420.json  simulation_20251015_212750.json  simulation_output_template.json  tegra_guidelines.md  tegra_voice.md
Agents/personas/: 2025-08-27_Integro Human Profile_Elena_v1_BR (1).md  Aisha_Patel_Integration_Expert_Persona_1.md  Alex Persona 1.md  Ellen Persona 4.md  (+18 more)
frontend/: README.md  package-lock.json  package.json
integro/: __init__.py  cli.py  voice_agent.py  web_server.py
output/: docx_analysis.json
qdrant/: .persistence_check
schemas/: weekly-content-schema.json
scripts/: clean_qdrant_wal.sh  create_all_agents.sh  debug_kb_on_startup.py  debug_railway_dns.sh  debug_railway_volume.py  deploy_droplet.sh  deploy_to_droplet.sh  examine_week1_day1.py  health_check.sh  migrate_sqlite_to_postgres.py  qdrant_startup.sh  run_voice_agent.py  start_direct.sh  start_with_kb_debug.sh  start_with_qdrant_clean.sh  verify_deployment.py  verify_sqlite_volume.py
tests/: TESTING.md  __init__.py  test_config.py  test_integro.py  test_knowledge.py  test_knowledge_offline.py  test_offline.py  test_simple.py  test_storage_auto_detection.py  test_tui.py  test_workflow_v3.py
(+667 files in other folders)
